objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Accordo_Operativo__c</fullName>
        <description>The same value of Accordo Operativo of parent Case Richiesta Fattibilità</description>
        <label>Accordo Operativo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Avvio_Fatturazione__c</fullName>
        <label>Data Avvio Fatturazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Civico__c</fullName>
        <formula>Network_Inventory__r.EOF_Civico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Civico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <formula>Network_Inventory__r.EOF_Comune__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comune</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_Attestazione__c</fullName>
        <formula>Network_Inventory__r.EOF_GPON_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPON Attestazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Building__c</fullName>
        <formula>Network_Inventory__r.EOF_ID_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Risorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Splitter_Secondario__c</fullName>
        <label>ID Splitter Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Identificativo_del_POP__c</fullName>
        <formula>Network_Inventory__r.EOF_Pop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identificativo del POP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Impresa__c</fullName>
        <label>Impresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Indirizzo__c</fullName>
        <formula>Network_Inventory__r.EOF_Indirizzo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirizzo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_OLO__c</fullName>
        <label>OLO</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Particella_Toponomastica__c</fullName>
        <formula>Network_Inventory__r.EOF_Particella_Top__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Particella Toponomastica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_Splitter_Secondario__c</fullName>
        <label>Posizione Splitter Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Provincia__c</fullName>
        <formula>Network_Inventory__r.EOF_Provincia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_SLA_Premium_Assurance__c</fullName>
        <label>SLA Premium Assurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Scala_Palazzina__c</fullName>
        <formula>Network_Inventory__r.EOF_Scala_Palazzina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scala Palazzina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Trouble_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trouble Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elementary_Area__c</fullName>
        <description>Campo del servizio remedy Network Creation ADD.</description>
        <label>Elementary Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_Asset_Name__c</fullName>
        <formula>RIGHT(EOF_ID_Risorsa__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 Digits of Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Rif__c</fullName>
        <label>NS. Rif.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network Inventory</label>
        <referenceTo>EOF_Network_Inventory__c</referenceTo>
        <relationshipLabel>Asset</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Risorsa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.OF_ServizioRichiesto__c</field>
                <operation>equals</operation>
                <valueField>Asset.RecordType.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Servizi Extra</relationshipLabel>
        <relationshipName>Asset_Extra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CPE_Quantity__c</fullName>
        <label>OF CPE Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup per gestire la relazione tra Interventi a vuoto (Servizi Extra) e Case</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.OF_IDContratto__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Case.OF_Servizio__c</field>
                <operation>equals</operation>
                <valueField>$Source.OF_ServizioRichiesto__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets (Case)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Civico__c</fullName>
        <label>Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ClusterPromozione__c</fullName>
        <label>Cluster Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceContratto__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OF_Contract__r.Id , OF_Contract__r.OF_IdContratto__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Contratto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgettoSpeciale__c</fullName>
        <label>Codice Progetto Speciale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgetto__c</fullName>
        <label>Codice Progetto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione2__c</fullName>
        <label>Data Attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione__c</fullName>
        <label>Data Attivazione OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataCessazione2__c</fullName>
        <label>Data Cessazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataCessazione__c</fullName>
        <label>Data Cessazione OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataDesospensione__c</fullName>
        <label>Data Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataRiattivazione__c</fullName>
        <label>Data Riattivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataScadenza__c</fullName>
        <label>Data Scadenza</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataSospensione__c</fullName>
        <label>Data Sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Data_Accordo_Operativo__c</fullName>
        <description>Data dell&apos;accordo operativo, previsto per i servizi a fattibilità</description>
        <label>Data Accordo Operativo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Data__c</fullName>
        <description>Data attivazione utilizzata per i servizi extra</description>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_GPON_Attestazione__c</fullName>
        <label>GPON Attestazione</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDCaseAttivazione__c</fullName>
        <label>Case Attivazione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDServizio__c</fullName>
        <label>ID Servizio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ID_Building__c</fullName>
        <label>ID Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Identificativo_del_POP__c</fullName>
        <label>Identificativo del POP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Macro_Area__c</fullName>
        <description>Campo del servizio remedy Network Creation ADD.</description>
        <label>Macro Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_OrdineID__c</fullName>
        <label>OrdineID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Particella_Toponomastica__c</fullName>
        <label>Particella Toponomastica</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProfiloOpenStream__c</fullName>
        <label>Profilo Open Stream</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProgettoSpeciale__c</fullName>
        <label>Progetto Speciale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Promozione__c</fullName>
        <label>Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloCommCode__c</fullName>
        <label>OF Remedy oloCommCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessageCode__c</fullName>
        <label>OF Remedy oloMessageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_oloMessage__c</fullName>
        <label>OF Remedy oloMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_productProvisioningCode__c</fullName>
        <label>OF Remedy productProvisioningCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remedy_ttNumber__c</fullName>
        <label>OF Remedy ttNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Rinnovabile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinnovabile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Scala_Palazzina__c</fullName>
        <label>Scala Palazzina</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Service_Code__c</fullName>
        <label>OF Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ServizioRichiesto__c</fullName>
        <label>Servizio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPON Passiva</fullName>
                </value>
                <value>
                    <fullName>Open Stream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_Stato__c</fullName>
        <label>Stato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attivo</fullName>
                </value>
                <value>
                    <fullName>Cessato</fullName>
                </value>
                <value>
                    <fullName>Sospeso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_SyncFattibilita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_SyncFattibilita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_SyncNoVert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_SyncNoVert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_TipoDiProcesso__c</fullName>
        <label>Tipo di processo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Assurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparato__c</fullName>
        <label>Tipologia apparato</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_UpdateFattibilita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_UpdateFattibilita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Attenuazione__c</fullName>
        <label>Attenuazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_LunghezzaOttica__c</fullName>
        <label>Lunghezza Ottica</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_PosizioneRilascioCircuitoOSU__c</fullName>
        <label>Posizione Rilascio Circuito OSU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Verticali__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Verticali</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>EOF_OLO__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAssetsFatt</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ASSET.STATUS</columns>
        <columns>Data_Avvio_Fatturazione__c</columns>
        <columns>OF_DataAttivazione2__c</columns>
        <columns>OF_DataScadenza__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.P2P,Asset.Fiber_Link,Asset.Fiber_Lease</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>OLOOF</value>
        </filters>
        <label>All Assets Fatt</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
            <role>PO_Back_Office</role>
            <role>PO_Supporto_Vendite</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAssets_Passivi</fullName>
        <columns>ASSET.NAME</columns>
        <columns>EOF_OLO__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.OF_GPONPassiva</value>
        </filters>
        <label>All Assets Passivi</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Preprovisioning</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Preprovisioning</value>
        </filters>
        <label>Preprovisioning</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_Da_Fatturare</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>ASSET.NAME</columns>
        <columns>EOF_ID_Risorsa__c</columns>
        <columns>OF_OrdineID__c</columns>
        <columns>OF_Case__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Data_Avvio_Fatturazione__c</columns>
        <columns>OF_DataScadenza__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>OLOOF</value>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.P2P,Asset.Fiber_Link,Asset.Fiber_Lease</value>
        </filters>
        <filters>
            <field>OF_DataScadenza__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OF_Rinnovabile__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>04 Scaduti</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_in_Fatturazione</fullName>
        <columns>EOF_ID_Risorsa__c</columns>
        <columns>OF_OrdineID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OF_DataAttivazione2__c</columns>
        <columns>Data_Avvio_Fatturazione__c</columns>
        <columns>OF_DataScadenza__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>OLOOF</value>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.P2P,Asset.Fiber_Link,Asset.Fiber_Lease</value>
        </filters>
        <filters>
            <field>Data_Avvio_Fatturazione__c</field>
            <operation>equals</operation>
        </filters>
        <label>01 da Fatturare</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_in_Fatturazione1</fullName>
        <columns>ASSET.NAME</columns>
        <columns>OF_OrdineID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Data_Avvio_Fatturazione__c</columns>
        <columns>OF_DataScadenza__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>OLOOF</value>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.P2P,Asset.Fiber_Link,Asset.Fiber_Lease</value>
        </filters>
        <filters>
            <field>Data_Avvio_Fatturazione__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2000</value>
        </filters>
        <filters>
            <field>OF_DataScadenza__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>02 in Fatturazione</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_Rinnovo_automatico</fullName>
        <columns>ASSET.NAME</columns>
        <columns>OF_OrdineID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Data_Avvio_Fatturazione__c</columns>
        <columns>OF_DataScadenza__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>OLOOF</value>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.P2P,Asset.Fiber_Link,Asset.Fiber_Lease</value>
        </filters>
        <filters>
            <field>Data_Avvio_Fatturazione__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2000</value>
        </filters>
        <filters>
            <field>OF_Rinnovabile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>03 Rinnovo automatico</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Fiber_Lease</fullName>
        <active>true</active>
        <label>Fiber Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fiber_Link</fullName>
        <active>true</active>
        <label>Fiber Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CD_Asset_GPON_Passiva</fullName>
        <active>true</active>
        <description>RecordType per gli Asset dei servizi passivi afferenti ai cluster C e D</description>
        <label>GPON Passiva CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CD_Asset_OpenStream</fullName>
        <active>true</active>
        <description>RecordType per gli Asset dei servizi attivi afferenti ai cluster C e D</description>
        <label>Open Stream CeD</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_GPONPassiva</fullName>
        <active>true</active>
        <description>PASSIVO</description>
        <label>GPON Passiva</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_InterventoAVuoto</fullName>
        <active>true</active>
        <description>EXTRA</description>
        <label>Intervento a vuoto</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_OpenStream</fullName>
        <active>true</active>
        <description>ATTIVO</description>
        <label>Open Stream</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_Verticale</fullName>
        <active>true</active>
        <description>EXTRA</description>
        <label>Verticale</label>
    </recordTypes>
    <recordTypes>
        <fullName>P2P</fullName>
        <active>true</active>
        <description>PORTALINO</description>
        <label>P2P</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_BTS_Collegamento</fullName>
        <active>true</active>
        <label>BTS Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_Backhauling_Collegamento</fullName>
        <active>true</active>
        <label>Backhauling_Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_CircuitiDiretti_Collegamento</fullName>
        <active>true</active>
        <label>PO_Asset_CircuitiDiretti_Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_DarkFiber_Collegamento</fullName>
        <active>true</active>
        <label>DarkFiber_Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_P2P_Attiva_Collegamento</fullName>
        <active>true</active>
        <label>P2P Attiva Collegamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Asset_P2P_Attiva_KIT</fullName>
        <active>true</active>
        <label>P2P Attiva KIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preprovisioning</fullName>
        <active>true</active>
        <label>Preprovisioning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risorsa</fullName>
        <active>true</active>
        <label>Risorsa</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OF_AccountValidation</fullName>
        <active>true</active>
        <description>Non permette il salvataggio di un asset di tipo intervento a vuoto se l&apos;account inserito è diverso da quello presente sul case selezionato</description>
        <errorConditionFormula>IF(  RecordType.Name = &apos;Intervento a vuoto&apos;,  AccountId != OF_Case__r.EOF_Account_OLO__c , false)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>L&apos;account inserito non coincide con quello presente sul case</errorMessage>
    </validationRules>
</CustomObject>